@@ -91,6 +91,7 @@ void    nact_tree_model_initial_load( BaseWindow *window, GtkTreeView *treeview 
 void    nact_tree_model_runtime_init( NactTreeModel *model, gboolean have_dnd );
 void    nact_tree_model_dispose( NactTreeModel *model );
 
+void    nact_tree_model_display( NactTreeModel *model, NAObject *object );
 void    nact_tree_model_dump( NactTreeModel *model );
 void    nact_tree_model_fill( NactTreeModel *model, GList *items, gboolean only_actions);
 void    nact_tree_model_insert( NactTreeModel *model, const NAObject *object, GtkTreePath *path, GtkTreeIter *iter, NAObject **parent );
