@@ -3,6 +3,8 @@
 	* src/common/na-object.c b:
 	Add class name in instance_dipose() trace.
 
+	* src/common/na-obj-action.c (are_equal): Remove trace.
+
 	* src/common/na-obj-menu.c:
 	Remove traces at instance_dispose() and instance_finalize().
 
@@ -35,6 +37,9 @@
 	from notebook's tabs.
 	nact_main_window_get_modified_items_count(): Replaced with
 	nact_main_window_has_modified_items().
+
+	* src/nact/nact-tree-model.c:
+	* src/nact/nact-tree-model.h (nact_tree_model_display): New function.
 
 	* src/nact/nact-window.c:
 	* src/nact/nact-window.h (nact_window_warn_count_modified):
